--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.carlkuesters</groupId>
+    <groupId>com.carlkuesters</groupId>
     <artifactId>swagger-maven-plugin</artifactId>
     <version>0.0.1</version>
     <packaging>maven-plugin</packaging>
@@ -105,10 +105,6 @@
                         <goals>
                             <goal>sign</goal>
                         </goals>
-                        <configuration>
-                            <executable>gpg2</executable>
-                            <useAgent>true</useAgent>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
