--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.carlkuesters</groupId>
     <artifactId>swagger-maven-plugin</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.2</version>
     <packaging>maven-plugin</packaging>
 
     <name>Swagger Maven Plugin</name>
@@ -35,21 +35,24 @@
     </scm>
 
     <properties>
-        <version.jackson>2.8.9</version.jackson>
-        <version.jaxb>2.3.1</version.jaxb>
-        <version.jaxrs>2.0.1</version.jaxrs>
-        <version.jersey>1.13</version.jersey>
-        <version.lombok>1.18.8</version.lombok>
+        <version.jackson>2.10.3</version.jackson>
+        <version.jaxb-api>2.3.1</version.jaxb-api>
+        <version.jaxrs-api>2.1.1</version.jaxrs-api>
+        <version.jersey-server>1.19.4</version.jersey-server>
+        <version.lombok>1.18.12</version.lombok>
         <version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
-        <version.maven-gpg-plugin>1.5</version.maven-gpg-plugin>
-        <version.maven-javadoc-plugin>2.9.1</version.maven-javadoc-plugin>
-        <version.maven-plugin-annotations>3.3</version.maven-plugin-annotations>
-        <version.maven-plugin-api>2.2.1</version.maven-plugin-api>
+        <version.maven-compat>3.6.3</version.maven-compat>
+        <version.maven-core>3.6.3</version.maven-core>
+        <version.maven-gpg-plugin>1.6</version.maven-gpg-plugin>
+        <version.maven-javadoc-plugin>3.2.0</version.maven-javadoc-plugin>
+        <version.maven-plugin-annotations>3.6.0</version.maven-plugin-annotations>
+        <version.maven-plugin-api>3.6.3</version.maven-plugin-api>
         <version.maven-plugin-plugin>3.6.0</version.maven-plugin-plugin>
-        <version.maven-source-plugin>2.2.1</version.maven-source-plugin>
-        <version.nexus-staging-maven-plugin>1.6.7</version.nexus-staging-maven-plugin>
-        <version.spring>4.3.7.RELEASE</version.spring>
-        <version.swagger>1.5.21</version.swagger>
+        <version.maven-plugin-testing-harness>3.3.0</version.maven-plugin-testing-harness>
+        <version.maven-source-plugin>3.2.1</version.maven-source-plugin>
+        <version.nexus-staging-maven-plugin>1.6.8</version.nexus-staging-maven-plugin>
+        <version.spring-web>5.2.5.RELEASE</version.spring-web>
+        <version.swagger-jersey-jaxrs>1.6.1</version.swagger-jersey-jaxrs>
     </properties>
 
     <dependencies>
@@ -57,7 +60,7 @@
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>${version.jaxb}</version>
+            <version>${version.jaxb-api}</version>
         </dependency>
         <!--Maven Plugin-->
         <dependency>
@@ -67,8 +70,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
-            <artifactId>maven-project</artifactId>
-            <version>${version.maven-plugin-api}</version>
+            <artifactId>maven-core</artifactId>
+            <version>${version.maven-core}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
@@ -80,24 +83,24 @@
         <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-jersey-jaxrs</artifactId>
-            <version>${version.swagger}</version>
+            <version>${version.swagger-jersey-jaxrs}</version>
         </dependency>
         <!--JaxRS-->
         <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
-            <version>${version.jaxrs}</version>
+            <version>${version.jaxrs-api}</version>
         </dependency>
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-server</artifactId>
-            <version>${version.jersey}</version>
+            <version>${version.jersey-server}</version>
         </dependency>
         <!--Spring-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>${version.spring}</version>
+            <version>${version.spring-web}</version>
         </dependency>
         <!--Jackson, needed for JSON export-->
         <dependency>
@@ -111,6 +114,20 @@
             <artifactId>lombok</artifactId>
             <version>${version.lombok}</version>
             <scope>provided</scope>
+        </dependency>
+        <!--Maven plugin testing-->
+        <dependency>
+            <groupId>org.apache.maven.plugin-testing</groupId>
+            <artifactId>maven-plugin-testing-harness</artifactId>
+            <version>${version.maven-plugin-testing-harness}</version>
+            <scope>test</scope>
+        </dependency>
+        <!--Needed to make maven-plugin-testing-harness work-->
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-compat</artifactId>
+            <version>${version.maven-compat}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
