--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,6 @@
     </scm>
 
     <properties>
-        <version.jackson>2.10.3</version.jackson>
         <version.jaxb-api>2.3.1</version.jaxb-api>
         <version.jaxrs-api>2.1.1</version.jaxrs-api>
         <version.jersey-server>1.19.4</version.jersey-server>
@@ -53,6 +52,8 @@
         <version.nexus-staging-maven-plugin>1.6.8</version.nexus-staging-maven-plugin>
         <version.spring-web>5.2.5.RELEASE</version.spring-web>
         <version.swagger-jersey-jaxrs>1.6.1</version.swagger-jersey-jaxrs>
+        <version.swagger-jaxrs2>2.1.1</version.swagger-jaxrs2>
+        <version.reflections>0.9.11</version.reflections>
     </properties>
 
     <dependencies>
@@ -81,11 +82,16 @@
         </dependency>
         <!--Swagger-->
         <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-jersey-jaxrs</artifactId>
-            <version>${version.swagger-jersey-jaxrs}</version>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-jaxrs2</artifactId>
+            <version>${version.swagger-jaxrs2}</version>
         </dependency>
-        <!--JaxRS-->
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>${version.reflections}</version>
+        </dependency>
+        <!--JaxRS, needed for BeanParam and InjectParam-->
         <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
@@ -101,12 +107,6 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>${version.spring-web}</version>
-        </dependency>
-        <!--Jackson, needed for JSON export-->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>${version.jackson}</version>
         </dependency>
         <!--Lombok-->
         <dependency>
