--- a/src/test/resources/jaxrs/pom.xml
+++ b/src/test/resources/jaxrs/pom.xml
@@ -1,20 +1,20 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.carlkuesters</groupId>
-    <artifactId>swagger-maven-plugin-test-spring</artifactId>
+    <artifactId>openapi-maven-plugin-test-spring</artifactId>
     <version>0.0.1</version>
     <build>
         <plugins>
             <plugin>
                 <groupId>com.github.carlkuesters</groupId>
-                <artifactId>swagger-maven-plugin</artifactId>
+                <artifactId>openapi-maven-plugin</artifactId>
                 <version>0.0.2</version>
                 <configuration>
-                    <sourcePackage>com.github.carlkuesters.swagger.samples.jaxrs</sourcePackage>
+                    <sourcePackage>com.github.carlkuesters.openapi.samples.jaxrs</sourcePackage>
                     <framework>jaxrs</framework>
                     <content>
                         <info>
-                            <title>Swagger Maven Plugin Sample</title>
+                            <title>OpenAPI Maven Plugin Sample</title>
                             <description>This is a sample.</description>
                             <version>v1</version>
                             <contact>
@@ -22,7 +22,7 @@
                                 <email>carl.kuesters@youengineering.com</email>
                                 <url>https://github.com/carlkuesters</url>
                             </contact>
-                            <termsOfService>https://github.com/carlkuesters/swagger-maven-plugin</termsOfService>
+                            <termsOfService>https://github.com/carlkuesters/openapi-maven-plugin</termsOfService>
                             <license>
                                 <name>Apache 2.0</name>
                                 <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
