--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.carlkuesters</groupId>
+    <groupId>com.youengineering</groupId>
     <artifactId>openapi-maven-plugin</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4</version>
     <packaging>maven-plugin</packaging>
 
     <name>OpenAPI Maven Plugin</name>
     <description>Generates an OpenAPI file out of sourcecode.</description>
-    <url>https://github.com/carlkuesters/openapi-maven-plugin</url>
+    <url>https://github.com/youengineering/openapi-maven-plugin</url>
 
     <licenses>
         <license>
@@ -29,9 +29,9 @@
     </developers>
 
     <scm>
-        <connection>scm:git:git://github.com/carlkuesters/openapi-maven-plugin.git</connection>
-        <developerConnection>scm:git:ssh://github.com:carlkuesters/openapi-maven-plugin.git</developerConnection>
-        <url>http://github.com/carlkuesters/openapi-maven-plugin/tree/master</url>
+        <connection>scm:git:git://github.com/youengineering/openapi-maven-plugin.git</connection>
+        <developerConnection>scm:git:ssh://github.com:youengineering/openapi-maven-plugin.git</developerConnection>
+        <url>http://github.com/youengineering/openapi-maven-plugin/tree/master</url>
     </scm>
 
     <properties>
