--- a/src/test/resources/spring/pom.xml
+++ b/src/test/resources/spring/pom.xml
@@ -1,16 +1,16 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.github.carlkuesters</groupId>
+    <groupId>com.youengineering</groupId>
     <artifactId>openapi-maven-plugin-test-spring</artifactId>
     <version>0.0.1</version>
     <build>
         <plugins>
             <plugin>
-                <groupId>com.github.carlkuesters</groupId>
+                <groupId>com.youengineering</groupId>
                 <artifactId>openapi-maven-plugin</artifactId>
                 <version>0.0.2</version>
                 <configuration>
-                    <sourcePackage>com.github.carlkuesters.openapi.samples.spring</sourcePackage>
+                    <sourcePackage>com.youengineering.openapi.samples.spring</sourcePackage>
                     <framework>spring</framework>
                     <content>
                         <info>
@@ -22,7 +22,7 @@
                                 <email>carl.kuesters@youengineering.com</email>
                                 <url>https://github.com/carlkuesters</url>
                             </contact>
-                            <termsOfService>https://github.com/carlkuesters/openapi-maven-plugin</termsOfService>
+                            <termsOfService>https://github.com/youengineering/openapi-maven-plugin</termsOfService>
                             <license>
                                 <name>Apache 2.0</name>
                                 <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
